mabger-meter/force-app/main/default/objects/Account/fields/Default_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup the Account Relationship to determine the default ship to number. Used in a number of places: Asset, Opportunities, Credit, BigMachines.</description>
    <inlineHelpText>Lookup the Account Relationship to determine the default ship to number.</inlineHelpText>
    <label>Default Account Relationship</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Account_Relationship__c.Partner_1__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Relationship__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>