mabger-meter/force-app/main/default/objects/Account/fields/Default_Acct_Rel_Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Default_Acct_Rel_Ship_To_Number__c</fullName>
    <description>Ship to Number on the Default Account Relationship</description>
    <formula>Default_Account_Relationship__r.Ship_To_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ship to Number on the Default Account Relationship</inlineHelpText>
    <label>Default Acct Rel Ship To Number</label>
    <type>Text</type>
</CustomField>