mabger-meter/force-app/main/default/objects/Account/fields/Default_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Default_Ship_To__c</fullName>
    <inlineHelpText>Default Ship To Number must be 4 characters with leading zeros.</inlineHelpText>
    <label>Default Ship To</label>
    <length>4</length>
    <type>Text</type>
</CustomField>