mabger-meter/force-app/main/default/objects/Account/fields/Default_Ship_To_Sales_Credit__c.field-meta.xml
<CustomField>
    <fullName>Default_Ship_To_Sales_Credit__c</fullName>
    <formula>Default_Account_Relationship__r.Partner_2_Sales_Cred_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Ship-To Sales Credit</label>
    <type>Text</type>
</CustomField>