mabger-meter/force-app/main/default/objects/Account/fields/DI_A_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DI_A_External_ID__c</fullName>
    <description>This external ID will hold the Customer Number from LX as part of the Integration process. The LX system will populate this field based on the LX creation of a new Company record.</description>
    <externalId>true</externalId>
    <inlineHelpText>This external ID will hold the Customer Number from LX as part of the Integration process. The LX system will populate this field based on the LX creation of a new Company record.</inlineHelpText>
    <label>DI A External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>