mabger-meter/force-app/main/default/objects/Account/fields/Discount_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>