mabger-meter/force-app/main/default/objects/Account/fields/Discount_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>