mabger-meter/force-app/main/default/objects/Account/fields/DM_A_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_A_External_ID__c</fullName>
    <description>This holds the migration value (sql key) from the Company table of the Pivotal system.</description>
    <externalId>true</externalId>
    <inlineHelpText>This holds the migration value (sql key) from the Company table of the Pivotal system.</inlineHelpText>
    <label>DM A External ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>