mabger-meter/force-app/main/default/objects/Account/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <label>Email ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>