mabger-meter/force-app/main/default/objects/Account/fields/Employee_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Employee_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>