mabger-meter/force-app/main/default/objects/Account/fields/Endpoint_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Review_Type__c</fullName>
    <description>By Kavya - As per Kyle Kolhouse&apos;s request , the field is Set for History tracking on 08/05/19 .</description>
    <label>Endpoint Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell Coverage/Field Analysis</fullName>
            </value>
            <value>
                <fullName>Coverage Map</fullName>
            </value>
            <value>
                <fullName>Administrative Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>