mabger-meter/force-app/main/default/objects/Account/fields/Endpoint_Type__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Type__c</fullName>
    <description>By Kavya - As per Kyle Kolhouse&apos;s request , the field is Set for History tracking on 08/05/19 .</description>
    <label>Endpoint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Endpoint_Type</valueSetName>
    </valueSet>
</CustomField>