mabger-meter/force-app/main/default/objects/Account/fields/External_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Parent_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Parent ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>