mabger-meter/force-app/main/default/objects/Account/fields/First_AR_Record_created__c.field-meta.xml
<CustomField>
    <fullName>First_AR_Record_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First AR Record created</label>
    <type>Checkbox</type>
</CustomField>