mabger-meter/force-app/main/default/objects/Account/fields/Flow_Process_Valve__c.field-meta.xml
<CustomField>
    <fullName>Flow_Process_Valve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow - Process/Valve</label>
    <type>Checkbox</type>
</CustomField>