mabger-meter/force-app/main/default/objects/Account/fields/Flow_RA_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Flow_RA_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow - RA Distributor</label>
    <type>Checkbox</type>
</CustomField>