mabger-meter/force-app/main/default/objects/Account/fields/Flow_Test_Measure__c.field-meta.xml
<CustomField>
    <fullName>Flow_Test_Measure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow - Test &amp; Measure</label>
    <type>Checkbox</type>
</CustomField>