mabger-meter/force-app/main/default/objects/Account/fields/Has_CDT_s__c.field-meta.xml
<CustomField>
    <fullName>Has_CDT_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CDT&apos;s</label>
    <type>Checkbox</type>
</CustomField>