mabger-meter/force-app/main/default/objects/Account/fields/Insufficient_Cell_Endpoint_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insufficient_Cell_Endpoint_Coverage__c</fullName>
    <description>Use in conjunction with the Verified ORION picklist fields.</description>
    <label>Insufficient Cell Endpoint Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>