mabger-meter/force-app/main/default/objects/Account/fields/Intellichief__c.field-meta.xml
<CustomField>
    <fullName>Intellichief__c</fullName>
    <formula>HYPERLINK(&quot;http://MILDOCLIB01:6080/intellichief/servlet/WTServlet?szAction=SCH&amp;DPP=Order%20to%20Cash%20(ILX)&amp;Customer%20Number=&quot;  &amp;Customer_Number__c,&quot;Click for INTELLICHIEF&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intellichief</label>
    <type>Text</type>
</CustomField>