mabger-meter/force-app/main/default/objects/Account/fields/International_Country__c.field-meta.xml
<CustomField>
    <fullName>International_Country__c</fullName>
    <label>International Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Country</fullName>
            </value>
            <value>
                <fullName>Not International Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>