mabger-meter/force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Represents the native language for the customer account</description>
    <inlineHelpText>Represents the native language for the customer account</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENU - US English</fullName>
            </value>
            <value>
                <fullName>GER - German</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>