mabger-meter/force-app/main/default/objects/Account/fields/Last_Endpoint_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Endpoint_Review_Date__c</fullName>
    <description>1. Field is editable by a small group of people with the ORION Verification permission set.
2. By Kavya - As per Kyle Kolhouse&apos;s request , the field is Set for History tracking on 08/05/19 .</description>
    <label>Last Endpoint Review Date</label>
    <type>Date</type>
</CustomField>