mabger-meter/force-app/main/default/objects/Account/fields/Last_Exchange_Price_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Exchange_Price_Review__c</fullName>
    <label>Last Exchange Price Review</label>
    <type>Date</type>
</CustomField>