mabger-meter/force-app/main/default/objects/Account/fields/Last_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date__c</fullName>
    <description>This is the date of the last Emailed Survey</description>
    <inlineHelpText>This is the date of the last Emailed Survey</inlineHelpText>
    <label>Last Survey Date</label>
    <type>Date</type>
</CustomField>