mabger-meter/force-app/main/default/objects/Account/fields/Load_File__c.field-meta.xml
<CustomField>
    <fullName>Load_File__c</fullName>
    <description>The source file name - for relationship building in the Account Relationship table</description>
    <label>Load File</label>
    <length>80</length>
    <type>Text</type>
</CustomField>