mabger-meter/force-app/main/default/objects/Account/fields/LTE_Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>LTE_Last_Review_Date__c</fullName>
    <description>This field is populated via workflow when the Verified ORION LTE field is checked. It will pop today(). Field is also editable by a small group of 3 people with the ORION Verification permission set.</description>
    <label>LTE Last Review Date</label>
    <type>Date</type>
</CustomField>