mabger-meter/force-app/main/default/objects/Account/fields/LX_Requested_By_Email__c.field-meta.xml
<CustomField>
    <fullName>LX_Requested_By_Email__c</fullName>
    <label>LX Requested By Email</label>
    <type>Email</type>
</CustomField>