mabger-meter/force-app/main/default/objects/Account/fields/Market_Libraries__c.field-meta.xml
<CustomField>
    <fullName>Market_Libraries__c</fullName>
    <description>Text must match Public Group Label exactly. Custom metadata record must be set up for each group as well.</description>
    <label>Market Libraries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility Water Partner Library</fullName>
            </value>
            <value>
                <fullName>Concrete Finishing Partner Library</fullName>
            </value>
            <value>
                <fullName>Process Valve Partner Library</fullName>
            </value>
            <value>
                <fullName>Flow Instrumentation Partner Library</fullName>
            </value>
            <value>
                <fullName>Open Distribution Partner Library</fullName>
            </value>
            <value>
                <fullName>Flow Default and Test Measure Library</fullName>
                <isActive>false</isActive>
                <label>Flow Default and Test Measure Library</label>
            </value>
            <value>
                <fullName>Open Distribution Products Library</fullName>
                <isActive>false</isActive>
                <label>Open Distribution Products Library</label>
            </value>
            <value>
                <fullName>Partner Central Library</fullName>
                <isActive>false</isActive>
                <label>Partner Central Library</label>
            </value>
            <value>
                <fullName>Process-Valve and Test Measure Library</fullName>
                <isActive>false</isActive>
                <label>Process-Valve and Test Measure Library</label>
            </value>
            <value>
                <fullName>Utility Library</fullName>
                <isActive>false</isActive>
                <label>Utility Library</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>