mabger-meter/force-app/main/default/objects/Account/fields/Market_Library_Audit__c.field-meta.xml
<CustomField>
    <fullName>Market_Library_Audit__c</fullName>
    <description>Market Library Audit set by WFR of the same name</description>
    <label>Market Library Audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>