mabger-meter/force-app/main/default/objects/Account/fields/MATEST__c.field-meta.xml
<CustomField>
    <fullName>MATEST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MATEST</label>
    <type>Checkbox</type>
</CustomField>