mabger-meter/force-app/main/default/objects/Account/fields/National_Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Strategic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMT Override</label>
    <type>Checkbox</type>
</CustomField>