mabger-meter/force-app/main/default/objects/Account/fields/NMA_Customer_XREF__c.field-meta.xml
<CustomField>
    <fullName>NMA_Customer_XREF__c</fullName>
    <description>National Meter Customer Numbers (Prefixed with &quot;NMA&quot;)</description>
    <label>NMA_Customer_XREF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>