mabger-meter/force-app/main/default/objects/Account/fields/Number_of_Electric_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Electric_Services__c</fullName>
    <inlineHelpText>Utility Only</inlineHelpText>
    <label>Number of Electric Services</label>
    <length>30</length>
    <type>Text</type>
</CustomField>