mabger-meter/force-app/main/default/objects/Account/fields/Number_Of_Services_Galaxy__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Services_Galaxy__c</fullName>
    <inlineHelpText>Utility Only</inlineHelpText>
    <label>Number Of Services Galaxy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>