mabger-meter/force-app/main/default/objects/Account/fields/Number_of_Total_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Total_Services__c</fullName>
    <inlineHelpText>Utility Only</inlineHelpText>
    <label>Number of Total Services</label>
    <length>10</length>
    <type>Text</type>
</CustomField>