mabger-meter/force-app/main/default/objects/Account/fields/Number_of_Total_Services_Number__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Total_Services_Number__c</fullName>
    <description>Convert Text field to Number field for reporting.</description>
    <formula>VALUE( Number_of_Total_Services__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Total Services (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>