mabger-meter/force-app/main/default/objects/Account/fields/Number_of_Water_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Water_Services__c</fullName>
    <inlineHelpText>Utility Only</inlineHelpText>
    <label>Number of Water Services</label>
    <length>20</length>
    <type>Text</type>
</CustomField>