mabger-meter/force-app/main/default/objects/Account/fields/Office_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Type__c</fullName>
    <label>Office Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branch Office</fullName>
            </value>
            <value>
                <fullName>Main Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>