mabger-meter/force-app/main/default/objects/Account/fields/Partnership_Enabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Enabled_Date__c</fullName>
    <description>timestamped by Process Builder &quot;Partner Account Enablement Automation&quot; when the account is enabled as a Partner (IsPartner=TRUE)</description>
    <label>Partnership Enabled Date</label>
    <type>DateTime</type>
</CustomField>