mabger-meter/force-app/main/default/objects/Account/fields/Payment_Terms_salesfacing__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_salesfacing__c</fullName>
    <inlineHelpText>This information is entered in Infor ERPLX.</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company_Number__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>**</fullName>
            </value>
            <value>
                <fullName>1% NET 10 DAYS</fullName>
            </value>
            <value>
                <fullName>2% 10 N30</fullName>
            </value>
            <value>
                <fullName>2% 10 N45 Days</fullName>
            </value>
            <value>
                <fullName>2% 10 N60</fullName>
            </value>
            <value>
                <fullName>2% 14 N30</fullName>
            </value>
            <value>
                <fullName>2% 14 N60</fullName>
            </value>
            <value>
                <fullName>2% 14 N70</fullName>
            </value>
            <value>
                <fullName>2%-30 N45 DAYS</fullName>
            </value>
            <value>
                <fullName>2% 8 N30</fullName>
            </value>
            <value>
                <fullName>2% NET 10 DAYS</fullName>
            </value>
            <value>
                <fullName>3%10/2%14 N30</fullName>
            </value>
            <value>
                <fullName>3% 10 N30</fullName>
            </value>
            <value>
                <fullName>3% 10 N60</fullName>
            </value>
            <value>
                <fullName>3% 14 N30</fullName>
            </value>
            <value>
                <fullName>3% 14 N45</fullName>
            </value>
            <value>
                <fullName>3% 14 N60</fullName>
            </value>
            <value>
                <fullName>3% 15 N30</fullName>
            </value>
            <value>
                <fullName>3% 21 N30</fullName>
            </value>
            <value>
                <fullName>3%30/2%45 N60</fullName>
            </value>
            <value>
                <fullName>3% 30 N60</fullName>
            </value>
            <value>
                <fullName>3% 30 N90</fullName>
            </value>
            <value>
                <fullName>3% 7 N30</fullName>
            </value>
            <value>
                <fullName>30 DAYS NET</fullName>
            </value>
            <value>
                <fullName>360 DAYS NET</fullName>
            </value>
            <value>
                <fullName>45 DAYS NET</fullName>
            </value>
            <value>
                <fullName>45 DAYS - NET</fullName>
            </value>
            <value>
                <fullName>BEACON CC</fullName>
            </value>
            <value>
                <fullName>CANADIAN $</fullName>
            </value>
            <value>
                <fullName>CARD PROCESSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>