mabger-meter/force-app/main/default/objects/Account/fields/payment_TermsP_3__c.field-meta.xml
<CustomField>
    <fullName>payment_TermsP_3__c</fullName>
    <description>Filed used to store the ERPLX Payment Terms Code</description>
    <label>Payment Terms Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>