mabger-meter/force-app/main/default/objects/Account/fields/Pilot_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pilot_End_Date__c</fullName>
    <label>Pilot End Date</label>
    <type>Date</type>
</CustomField>