mabger-meter/force-app/main/default/objects/Account/fields/Pilot_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Notes__c</fullName>
    <label>Pilot Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>