mabger-meter/force-app/main/default/objects/Account/fields/Pilot_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Start_Date__c</fullName>
    <label>Pilot Start Date</label>
    <type>Date</type>
</CustomField>