mabger-meter/force-app/main/default/objects/Account/fields/PONum_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>PONum_to_Quote__c</fullName>
    <label>PONum to Quote</label>
    <length>35</length>
    <type>Text</type>
</CustomField>