mabger-meter/force-app/main/default/objects/Account/fields/Previous_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payment_Terms__c</fullName>
    <label>Previous Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>