mabger-meter/force-app/main/default/objects/Account/fields/Primary_Sales_Credit_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Credit_Number__c</fullName>
    <label>Primary Sales Credit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>