mabger-meter/force-app/main/default/objects/Account/fields/Priority_Code__c.field-meta.xml
<CustomField>
    <fullName>Priority_Code__c</fullName>
    <label>Priority Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>