mabger-meter/force-app/main/default/objects/Account/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>List of Products used to control access to Product specific areas of Extranet</description>
    <inlineHelpText>List of Products used to control access to Product specific areas of Extranet</inlineHelpText>
    <label>Extranet Product Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&quot;AquaCUE&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Automotive Oval Gear&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Concrete&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Coriolis&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Cox&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Dynasonics&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Flow Dynamics&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Impeller/Data Industrial&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Industrial MKE M.M.&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ModMAG M Series&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;NMAAI Only&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Preso&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Research Control Valves (RCV)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Sales Policies&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Utility&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Utility - Latin America&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Utility Sub-Distributors&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Vortex&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Wyco&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Wyco - Latin America&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>