mabger-meter/force-app/main/default/objects/Account/fields/Proposed_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Proposed_to_Email__c</fullName>
    <label>Proposed to Email</label>
    <type>Email</type>
</CustomField>