mabger-meter/force-app/main/default/objects/Account/fields/Proposed_To_Fax__c.field-meta.xml
<CustomField>
    <fullName>Proposed_To_Fax__c</fullName>
    <label>Proposed To Fax</label>
    <type>Phone</type>
</CustomField>