mabger-meter/force-app/main/default/objects/Account/fields/Proposed_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_To_Name__c</fullName>
    <label>Proposed To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>