mabger-meter/force-app/main/default/objects/Account/fields/Proposed_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Proposed_To_Phone__c</fullName>
    <label>Proposed To Phone</label>
    <type>Phone</type>
</CustomField>