mabger-meter/force-app/main/default/objects/Account/fields/Prorated_Period_Exchange_Price__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Period_Exchange_Price__c</fullName>
    <label>Prorated Period Exchange Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>