mabger-meter/force-app/main/default/objects/Account/fields/Quick_Info__c.field-meta.xml
<CustomField>
    <fullName>Quick_Info__c</fullName>
    <description>Used in the search results to display more information in the account&apos;s secondary lookup field</description>
    <formula>Customer_Number__c+ &quot;: &quot;+BillingStreet+&quot;, &quot;+BillingCity+&quot;, &quot;+BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Number, Billing Street, City, State</inlineHelpText>
    <label>Quick Info</label>
    <type>Text</type>
</CustomField>