mabger-meter/force-app/main/default/objects/Account/fields/ReadCenter_EOL_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>ReadCenter_EOL_Notice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If box is checked, an email was sent using the ReadCenter End of Life template. Updated via field update</description>
    <inlineHelpText>If box is checked, an email was sent using the ReadCenter End of Life template</inlineHelpText>
    <label>ReadCenter EOL Notice Sent</label>
    <type>Checkbox</type>
</CustomField>