mabger-meter/force-app/main/default/objects/Account/fields/Reference_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who to contact for a reference</description>
    <inlineHelpText>Contact person to be used as a reference</inlineHelpText>
    <label>Reference Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>