mabger-meter/force-app/main/default/objects/Account/fields/Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Notes__c</fullName>
    <inlineHelpText>Notes and/or special instructions associated with using this account as a reference.</inlineHelpText>
    <label>Reference Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>